Fix position of dark mode switcher in mobile and desktop view (#241)
* Fix position of dark mode switcher in mobile and desktop view

* Update css

* Flex

--- a/apps/www/components/headers/navigationHeader/darkModeSwitcher/darkModeSwitcher.module.scss
+++ b/apps/www/components/headers/navigationHeader/darkModeSwitcher/darkModeSwitcher.module.scss
@@ -6,8 +6,6 @@
   }
   position: relative;
   display: block;
-  justify-content: center;
-  align-items: center;
   width: 40px;
   height: 22px;
   input {
