--- a/apps/www/components/headers/navigationHeader/navigationHeader.module.scss
+++ b/apps/www/components/headers/navigationHeader/navigationHeader.module.scss
@@ -149,7 +149,10 @@
       display: flex;
       flex-direction: column;
       text-align: center;
-      margin-top: 90px;
+      margin-top: 70px;
+      li:last-child {
+        order: -1;
+      }
     }
     a {
       font-size: 2rem;
@@ -164,6 +167,7 @@
     ul {
       display: flex;
       flex-direction: row;
+      align-items: center;
     }
     li {
       &:first-child {
